@@ -2,11 +2,10 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit eutils subversion autotools flag-o-matic
+inherit eutils subversion autotools
 
 ESVN_REPO_URI="https://libwiimote.svn.sourceforge.net/svnroot/libwiimote/branches/ant"
 ESVN_PROJECT="libwiimote"
-#ESVN_BOOTSTRAP="eautoreconf"
 
 DESCRIPTION="Library to connect to the Nintendo Wii remote (svn snapshot)"
 HOMEPAGE="http://libwiimote.sourceforge.net"
@@ -17,7 +16,8 @@ KEYWORDS="~amd64 ~x86"
 IUSE="examples tilt force"
 
 RDEPEND="net-wireless/bluez-libs"
-DEPEND="${RDEPEND}"
+DEPEND="${RDEPEND}
+		dev-util/pkgconfig"
 
 src_unpack() {
 	subversion_src_unpack
@@ -27,22 +27,18 @@ src_unpack() {
 
 src_compile() {
 	econf \
-		$(use_enable force force) \
-		$(use_enable tilt tilt) \
+		$(use_enable force) \
+		$(use_enable tilt) \
 		|| die "Error: econf failed!"
 
 	emake || die "emake failed"
 }
 
-
 src_install() {
-	emake install DESTDIR="${D}" || die "emake install failed"
+	emake DESTDIR="${D}" install || die "emake install failed"
 	dodoc AUTHORS NEWS README TODO
 
 	if use examples; then
-		elog "Installing test programs with sources in /usr/share/doc/${PF}/${DOCDESTTREE}"
-		dodir /usr/share/doc/${PF}/${DOCDESTTREE}
-		cp "${S}/test/test? ${D}usr/share/doc/${PF}/${DOCDESTTREE}"
-		dodoc "${S}/test/test?.c"
+		dodoc test/test?.c
 	fi
 }
