@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Feb 2008; Christoph Brill (egore) egore@gmx.de libwiimote-0.4.ebuild,
+  libwiimote-9999.ebuild:
+  Update ebuilds with suggestions from Tommy[D]
+
   16 Feb 2008; Christoph Brill (egore) egore@gmx.de
   +files/libwiimote-9999-ldflags.patch, libwiimote-9999.ebuild:
   Add patch to build with --as-needed LDFLAGS
